compiler/weave_syntax/tests/data/Tokens.error
error: Expected ';'
        --> <source>:2:1
         |
       2 | char
         | ^^^^
error: Expected ';'
        --> <source>:3:1
         |
       3 | char16
         | ^^^^^^
error: Expected ';'
        --> <source>:4:1
         |
       4 | char32
         | ^^^^^^
error: Expected ';'
        --> <source>:5:1
         |
       5 | char8
         | ^^^^^
error: Expected ';'
        --> <source>:6:1
         |
       6 | decimal128
         | ^^^^^^^^^^
error: Expected ';'
        --> <source>:7:1
         |
       7 | decimal32
         | ^^^^^^^^^
error: Expected ';'
        --> <source>:8:1
         |
       8 | decimal64
         | ^^^^^^^^^
error: Expected ';'
        --> <source>:9:1
         |
       9 | float16
         | ^^^^^^^
error: Expected ';'
        --> <source>:10:1
         |
      10 | float32
         | ^^^^^^^
error: Expected ';'
        --> <source>:11:1
         |
      11 | float64
         | ^^^^^^^
error: Expected ';'
        --> <source>:12:1
         |
      12 | int128
         | ^^^^^^
error: Expected ';'
        --> <source>:13:1
         |
      13 | int16
         | ^^^^^
error: Expected ';'
        --> <source>:14:1
         |
      14 | int256
         | ^^^^^^
error: Expected ';'
        --> <source>:15:1
         |
      15 | int32
         | ^^^^^
error: Expected ';'
        --> <source>:16:1
         |
      16 | int64
         | ^^^^^
error: Expected ';'
        --> <source>:17:1
         |
      17 | int8
         | ^^^^
error: Expected ';'
        --> <source>:18:1
         |
      18 | iptr
         | ^^^^
error: Expected ';'
        --> <source>:19:1
         |
      19 | isize
         | ^^^^^
error: Expected ';'
        --> <source>:20:1
         |
      20 | object
         | ^^^^^^
error: Expected ';'
        --> <source>:21:1
         |
      21 | string
         | ^^^^^^
error: Expected ';'
        --> <source>:22:1
         |
      22 | uint128
         | ^^^^^^^
error: Expected ';'
        --> <source>:23:1
         |
      23 | uint16
         | ^^^^^^
error: Expected ';'
        --> <source>:24:1
         |
      24 | uint256
         | ^^^^^^^
error: Expected ';'
        --> <source>:25:1
         |
      25 | uint32
         | ^^^^^^
error: Expected ';'
        --> <source>:26:1
         |
      26 | uint64
         | ^^^^^^
error: Expected ';'
        --> <source>:27:1
         |
      27 | uint8
         | ^^^^^
error: Expected ';'
        --> <source>:28:1
         |
      28 | uptr
         | ^^^^
error: Expected ';'
        --> <source>:29:1
         |
      29 | usize
         | ^^^^^
error: Expected ';'
        --> <source>:30:1
         |
      30 | void
         | ^^^^
error: Expected ';'
        --> <source>:31:1
         |
      31 | byte
         | ^^^^
error: Expected ';'
        --> <source>:32:1
         |
      32 | and
         | ^^^
error: Unexpected tokens
        --> <source>:32:1
         |
      32 | and
         | ^^^
      33 | and_eq
         | ^^^^^^
      34 | or
         | ^^
     ... |
     278 | ]
         | ^
     279 | ::
         | ^^
     280 | :
         | ^
error: Unexpected tokens
        --> <source>:282:1
         |
     282 | @
         | ^
     283 | $
         | ^
     284 | %=
         | ^^
     ... |
     318 | r"raw string \t"
         | ^^^^^^^^^^^^^^^^
     319 | r#"raw string \n"#
         | ^^^^^^^^^^^^^^^^^^
     320 | r##" r#"inner\nraw\nstring"# "##
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: Expected ';'
        --> <source>:321:1
         |
     321 | 
         | ^
